# libqsearch

./: .gitignore  Makefile.am  NEWS  README  README.md  THANKS  configure.ac  t.c
lib/: libqsearch.pc.in  qsearch.map  qsearch.sym
libqs/: Makefile.am  libqs.c  mcmc.c
libqs/include/: qsearch.h
libqs/include/qsearch/: libqs.h  quartet_tree.h
libqsutil/: Makefile.am
man/: maketree.1
test/: Makefile.am  compile-dist-test  compile-test  run-unitcheck-test
test/unitcheck/: Makefile.am  basic_complete.ts
tools/: Makefile.am
